tests/fixtures/errors/ci/src/Shared.elm
module Shared exposing (greet)

greet who = "Hello " ++ who
